# xor-distance-exercise

./: .codecov.yml  .travis.yml  Cargo.toml  README.md
data/: Cargo.toml  lib.rs
src/: bitops.rs  bits.rs  delivery_system.rs  lib.rs  main.rs  xor_distance.rs
